--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "rootDir": "src",
+    "outDir": "build",
     "jsx": "react-jsx"
   },
   "include": [
