--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ns-horizon-react",
   "version": "0.1.0",
-  "homepage": "https://oj7.github.io/ns-horizon-react",
+  "homepage": "https://oj7.github.io/NS-Horizon-React/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
